# Nova3D-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build_engine.bat  build_sandbox.bat  build_validator.bat  run_sandbox.bat
.github/workflows/: ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
apps/AssetValidator/: CMakeLists.txt  main.cpp
apps/Sandbox/: CMakeLists.txt  gui_validation.cpp  main.cpp
assets/gui/: sandbox_layout.json
assets/models/: cube.mtl
assets/shaders/: basic.glsl
assets/tests/import/expected/: fbx_minimal_ascii.json  gltf_broken_invalid.json  md3_broken_invalid.json  md5_animation_valid.json  md5_broken_invalid.json  md5_minimal_valid.json  obj_missing_material_edge.json  obj_missing_uv_normals_edge.json  obj_triangle_valid.json
assets/tests/import/fbx/: minimal_ascii.expect.json  minimal_ascii.fbx
assets/tests/import/gltf/: broken.expect.json
assets/tests/import/invalid/: broken.md5mesh
assets/tests/import/md3/: broken.expect.json  broken.md3
assets/tests/import/md5/: broken.expect.json  minimal.expect.json  minimal.md5mesh
assets/tests/import/valid/: minimal.md5anim
cmake/Toolchains/: android-ndk.cmake
docs/: advanced_asset_gui_fbx_foundation.md  android_packaging.md  animation_terrain_spatial_foundation.md  architecture.md  build_matrix.md  format_support_policy.md  forward_rendering_architecture.md  graphics_pipeline.md  gui_advanced_architecture.md  gui_gap_analysis.md  gui_layout_schema.md  import_backend_policy.md  import_format_matrix.md  import_regression_suite.md  mesh_material_pipeline.md  render_graph_foundation.md  resource_architecture.md  roadmap.md  runtime_performance_architecture.md  scene_animators_collision.md  scene_animators_collision_gap.md  scene_math_architecture.md  sdk_release_checklist.md  tooling_foundations.md
include/: NIEventReceiver.hpp  NInputManager.hpp  NKeyCodes.hpp  NSEvent.hpp  Nova3D.hpp
include/AI/Entities/: NIAIEntity.hpp  NICombatNPC.hpp  NIPlayerAIEntity.hpp
include/AI/Pathfinding/: NIPathFinder.hpp  NSWaypointGroup.hpp
include/Nova3D/Animation/: AnimationAssets.hpp  AnimationClip.hpp  AnimationState.hpp  Skeleton.hpp
include/Nova3D/Assets/: AssetPipeline.hpp  AssetRegistry.hpp  AssetTypes.hpp  ImporterRegistry.hpp  TextureLoader.hpp
include/Nova3D/Assets/Importers/: AnimationImporter.hpp  FBXImporter.hpp  MeshImporter.hpp  NModelImporter.hpp  OBJImporter.hpp  SkeletonImporter.hpp
include/Nova3D/Audio/: NAudio.hpp
include/Nova3D/Core/: Engine.hpp  IApplication.hpp  Logger.hpp  ObjectRegistry.hpp
include/Nova3D/Core/Math/: Math.hpp
include/Nova3D/Debug/: DebugRenderer.hpp
include/Nova3D/Editor/: RuntimeIntrospection.hpp  RuntimeUIFoundation.hpp
include/Nova3D/Fonts/: Font.hpp
include/Nova3D/GUI/: GUI.hpp
include/Nova3D/Graphics/: IRenderBackend.hpp  IRenderContext.hpp  IRenderer.hpp  MaterialInstance.hpp  RenderBackendFactory.hpp  RendererTypes.hpp
include/Nova3D/Graphics/RenderPipeline/: ForwardRenderer.hpp
include/Nova3D/Graphics/Resources/: MeshGPUResource.hpp
include/Nova3D/IO/: Archives.hpp  FileSystem.hpp
include/Nova3D/Memory/: MemoryFoundation.hpp
include/Nova3D/Platform/: IInput.hpp  IPlatformServices.hpp  IWindow.hpp  NPlatform.hpp  PlatformFactory.hpp
include/Nova3D/Reflection/: Reflection.hpp
include/Nova3D/Resources/: DependencyGraph.hpp  HotReloadHooks.hpp  Resource.hpp  ResourceSystem.hpp
include/Nova3D/Runtime/: EngineInfrastructure.hpp  RuntimeFoundation.hpp  TaskSystem.hpp
include/Nova3D/Scene/: IMesh.hpp  MeshData.hpp  Prefab.hpp  Scene.hpp  SceneSerialization.hpp
include/Nova3D/Scene/NGfx/: NMathTypes.hpp  NMeshManagement.hpp  NParticles.hpp  NSceneGraph.hpp  NSceneNodeAnimator.hpp
include/Nova3D/Serialization/: JsonSerialization.hpp  Serialization.hpp
include/Nova3D/Spatial/: SpatialPartition.hpp
include/Nova3D/Terrain/: Terrain.hpp
lib/: readme.txt
src/: NIEventReceiver.cpp  NInputManager.cpp
src/AI/Core/: NIAIManager.hpp
src/AI/Entities/: NIAISensor.hpp  NINPC.hpp
src/AI/Math/: NMathTypes.hpp
src/AI/Pathfinding/: NCAStarPathFinder.hpp  NIWaypoint.hpp
src/AI/Vision/: NIFieldOfView.hpp
src/Animation/: Animation.cpp  Skeleton.cpp
src/Assets/: AssetPipeline.cpp  AssetRegistry.cpp  AssetTypes.cpp  ImporterRegistry.cpp  TextureLoader.cpp
src/Assets/Importers/: FBXImporter.cpp  NModelImporter.cpp  OBJImporter.cpp
src/Audio/: NAudio.cpp
src/Core/: Engine.cpp  Logger.cpp  ObjectRegistry.cpp
src/Debug/: DebugRenderer.cpp
src/Editor/: RuntimeIntrospection.cpp  RuntimeUIFoundation.cpp
src/Fonts/: Font.cpp
src/GUI/: GUI.cpp
src/Graphics/: MaterialInstance.cpp  RenderBackendFactory.cpp
src/Graphics/OpenGL/: OpenGLRenderBackend.cpp  OpenGLRenderBackend.hpp
src/Graphics/RenderPipeline/: ForwardRenderer.cpp
src/Graphics/Resources/: MeshGPUResource.cpp
src/IO/: Archives.cpp  FileSystem.cpp
src/Memory/: MemoryFoundation.cpp
src/Platform/: PlatformFactory.cpp
src/Platform/SDL/: SDLPlatformServices.cpp  SDLPlatformServices.hpp
src/Reflection/: Reflection.cpp
src/Resources/: DependencyGraph.cpp  HotReloadHooks.cpp  ResourceSystem.cpp
src/Runtime/: EngineInfrastructure.cpp  RuntimeFoundation.cpp  TaskSystem.cpp
src/Scene/: NMeshManagement.cpp  Prefab.cpp  Scene.cpp  SceneSerialization.cpp
src/Serialization/: JsonSerialization.cpp  Serialization.cpp
src/Spatial/: SpatialPartition.cpp
src/Terrain/: Terrain.cpp
tools/: nova_asset_validator.cpp
